bpo-30557: faulthandler now correctly filters and displays exception codes on Windows